src/action/kiwi/service/reasoning/parser/SimpleKWRLProgramParser.java
/* Generated By:JavaCC: Do not edit this line. SimpleKWRLProgramParser.java */
package kiwi.service.reasoning.parser;

import kiwi.service.reasoning.ast.*;


public class SimpleKWRLProgramParser implements SimpleKWRLProgramParserConstants {

  public static void main(String args[]) throws ParseException {
    SimpleKWRLProgramParser parser = new SimpleKWRLProgramParser(System.in);
    System.out.println("Enter a simple KWRL program:");
    try
    {
                Program program = parser.Program();

                System.out.println(program.toString());
        } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
        }
  }

//https://javacc.dev.java.net/doc/javaccgrm.html
//	If the label is preceded by a "#", then this regular expression may not be referred to from expansion units, but only from within other regular expressions. When the "#" is present, the regular expression is referred to as a "private regular expression". 
//  If the "#" is omitted, the token manager will erroneously recognize a string like E123 as a legal token of kind EXPONENT (instead of IDENTIFIER in the Java grammar).

// (([a-zA-Z][0-9a-zA-Z+\\-\\.]*:)?/{0,2}[0-9a-zA-Z;/?:@&=+$\\.\\-_!~*'()%]+)? (#[0-9a-zA-Z;/?:@&=+$\\.\\-_!~*'()%]+)?
// http://aspn.activestate.com/ASPN/Mail/Message/xml-dev/754445
  static final public Program Program() throws ParseException {
                     Program program = new Program(); int nullNameCount = 0; Namespace ns; Rule rule; Token name = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ns = NamespaceDeclaration();
                                  program.addNamespace(ns);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        name = jj_consume_token(IDENTIFIER);
        jj_consume_token(22);
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      rule = Rule();
    if (name == null) {
        nullNameCount++;
        rule.setName(Rule.RULE_NAME_PREFIX + nullNameCount);
    } else {
        rule.setName(name.image);
    }

    program.addRule(rule); name=null; //it's declared above, once set it doesn't get cleared

      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
      case LEFTP:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(0);
    {if (true) return program;}
    throw new Error("Missing return statement in function");
  }

  static final public Namespace NamespaceDeclaration() throws ParseException {
                                   Namespace ns; Token prefix; Uri uri;
    jj_consume_token(23);
    prefix = jj_consume_token(IDENTIFIER);
    jj_consume_token(22);
    jj_consume_token(24);
    uri = Uri();
    jj_consume_token(25);
    {if (true) return new Namespace(prefix.image, uri.getUri());}
    throw new Error("Missing return statement in function");
  }

  static final public Rule Rule() throws ParseException {
                Body body; Head head;
    body = Body();
    jj_consume_token(THEN);
    head = Head();
    {if (true) return new Rule(body, head);}
    throw new Error("Missing return statement in function");
  }

  static final public Body Body() throws ParseException {
                Body body = new Body(); Formula formula;
    if (jj_2_1(2147483647)) {
      formula = FormulaWOParenthesis();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
      case LEFTP:
        formula = Formula();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    body.setFormula(formula); {if (true) return body;}
    throw new Error("Missing return statement in function");
  }

  static final public Head Head() throws ParseException {
                Head head = new Head(); Formula formula;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCONSISTENCY:
      jj_consume_token(INCONSISTENCY);
                            head.setInconsistency(new Inconsistency());
      break;
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_2(2147483647)) {
        formula = HeadFormulaWOParenthesis();
                                                 head.setFormula(formula);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEFTP:
          formula = HeadFormula();
                                    head.setFormula(formula);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
          {if (true) return head;}
    throw new Error("Missing return statement in function");
  }

  static final public Formula FormulaWOParenthesis() throws ParseException {
                                   Formula formula;
    if (jj_2_4(2147483647)) {
      if (jj_2_3(2147483647)) {
        formula = Conjunction();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
        case LEFTP:
          formula = Disjunction();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        formula = Negation();
        break;
      case LEFTP:
        formula = BodyTriplePattern();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return formula;}
    throw new Error("Missing return statement in function");
  }

  static final public Formula Formula() throws ParseException {
                      Formula formula;
    if (jj_2_7(2)) {
      formula = BodyTriplePattern();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFTP:
        jj_consume_token(LEFTP);
        if (jj_2_6(2147483647)) {
          formula = Conjunction();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOT:
          case LEFTP:
            if (jj_2_5(2147483647)) {
              formula = Disjunction();
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case NOT:
              case LEFTP:
                formula = Formula();
                break;
              default:
                jj_la1[8] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(RIGHTP);
        break;
      case NOT:
        formula = Negation();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return formula;}
    throw new Error("Missing return statement in function");
  }

  static final public Formula HeadFormula() throws ParseException {
                          Formula formula;
    jj_consume_token(LEFTP);
    formula = HeadConjunction();
    jj_consume_token(RIGHTP);
    {if (true) return formula;}
    throw new Error("Missing return statement in function");
  }

  static final public Formula HeadFormulaWOParenthesis() throws ParseException {
                                       Formula formula;
    formula = HeadConjunction();
    {if (true) return formula;}
    throw new Error("Missing return statement in function");
  }

  static final public Conjunction Conjunction() throws ParseException {
                               Conjunction conjunction = new Conjunction(); Formula formula;
    formula = Formula();
                        conjunction.addFormula(formula);
    label_3:
    while (true) {
      jj_consume_token(AND);
      formula = Formula();
                                                                                          conjunction.addFormula(formula);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
    }
    {if (true) return conjunction;}
    throw new Error("Missing return statement in function");
  }

  static final public Disjunction Disjunction() throws ParseException {
                               Disjunction disjunction = new Disjunction(); Formula formula;
    formula = Formula();
                        disjunction.addFormula(formula);
    label_4:
    while (true) {
      jj_consume_token(OR);
      formula = Formula();
                                                                                         disjunction.addFormula(formula);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
    }
    {if (true) return disjunction;}
    throw new Error("Missing return statement in function");
  }

  static final public Negation Negation() throws ParseException {
                       Formula formula;
    if (jj_2_8(2)) {
      jj_consume_token(NOT);
      formula = BodyTriplePattern();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        jj_consume_token(NOT);
        formula = Formula();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return new Negation(formula);}
    throw new Error("Missing return statement in function");
  }

  static final public Conjunction HeadConjunction() throws ParseException {
                                   Conjunction conjunction = new Conjunction(); TriplePattern triplePattern;
    triplePattern = HeadTriplePattern();
                                        conjunction.addFormula(triplePattern);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
      jj_consume_token(AND);
      triplePattern = HeadTriplePattern();
                                                                                                                                conjunction.addFormula(triplePattern);
    }
    {if (true) return conjunction;}
    throw new Error("Missing return statement in function");
  }

  static final public TriplePattern BodyTriplePattern() throws ParseException {
                                     Term subject; Term property; Term object;
    jj_consume_token(LEFTP);
    subject = Subject();
    property = Property();
    object = Object();
    jj_consume_token(RIGHTP);
          {if (true) return new TriplePattern(subject, property, object);}
    throw new Error("Missing return statement in function");
  }

  static final public TriplePattern HeadTriplePattern() throws ParseException {
                                     Term subject; Term property; Term object;
    jj_consume_token(LEFTP);
    subject = HeadSubject();
    property = Property();
    object = HeadObject();
    jj_consume_token(RIGHTP);
          {if (true) return new TriplePattern(subject, property, object);}
    throw new Error("Missing return statement in function");
  }

  static final public Term HeadSubject() throws ParseException {
                       Uri uri = null; Variable variable = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case URI:
    case NS_URI:
      uri = Uri();
      break;
    case VARIABLE:
      variable = Variable();
      break;
    case URICONSTRUCTION:
      variable = ConstructionVariable();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if (uri != null) {
                        {if (true) return uri;}
                }

                {if (true) return variable;}
    throw new Error("Missing return statement in function");
  }

  static final public Term Property() throws ParseException {
                    Uri uri = null; Variable variable = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case URI:
    case NS_URI:
      uri = Uri();
      break;
    case VARIABLE:
      variable = Variable();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if (uri != null)
                        {if (true) return uri;}

                {if (true) return variable;}
    throw new Error("Missing return statement in function");
  }

  static final public Term HeadObject() throws ParseException {
                      Uri uri = null; Variable variable = null; Literal literal = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case URI:
    case NS_URI:
      uri = Uri();
      break;
    case VARIABLE:
      variable = Variable();
      break;
    case URICONSTRUCTION:
      variable = ConstructionVariable();
      break;
    case STRLIT:
    case 26:
      literal = Literal();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if (uri != null)
                        {if (true) return uri;}

                if (variable != null)
                        {if (true) return variable;}

                {if (true) return literal;}
    throw new Error("Missing return statement in function");
  }

  static final public Term Subject() throws ParseException {
                   Uri uri = null; Variable variable = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case URI:
    case NS_URI:
      uri = Uri();
      break;
    case VARIABLE:
      variable = Variable();
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if (uri != null)
                        {if (true) return uri;}

                if (variable != null)
                        {if (true) return variable;}
    throw new Error("Missing return statement in function");
  }

  static final public Term Object() throws ParseException {
                  Uri uri = null; Variable variable = null; Literal literal = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case URI:
    case NS_URI:
      uri = Uri();
      break;
    case VARIABLE:
      variable = Variable();
      break;
    case STRLIT:
    case 26:
      literal = Literal();
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if (uri != null)
                        {if (true) return uri;}

                if (variable != null)
                        {if (true) return variable;}

                {if (true) return literal;}
    throw new Error("Missing return statement in function");
  }

  static final public Uri Uri() throws ParseException {
              Token uri;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case URI:
      uri = jj_consume_token(URI);
      break;
    case NS_URI:
      uri = jj_consume_token(NS_URI);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return new Uri(uri.image);}
    throw new Error("Missing return statement in function");
  }

  static final public Variable Variable() throws ParseException {
                       Token t;
    t = jj_consume_token(VARIABLE);
      {if (true) return new Variable (t.image);}
    throw new Error("Missing return statement in function");
  }

//TODO language tags
  static final public Literal Literal() throws ParseException {
                     Token literal = null; Uri type = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRLIT:
      literal = jj_consume_token(STRLIT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPE:
        jj_consume_token(TYPE);
        type = Uri();
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      break;
    case 26:
      jj_consume_token(26);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   //have to remove the leading " character first
        if (type != null) {
                {if (true) return new TypedLiteral(literal.image.substring(1, literal.image.length()-1), type.getUri());}
        }

        {if (true) return new Literal(literal.image.substring(1, literal.image.length()-1));}
    throw new Error("Missing return statement in function");
  }

//http://www.engr.mun.ca/~theo/JavaCC-FAQ/javacc-faq-moz.htm 4.5, 4.6 lookahead, factoring the <VARIABLE> out in Object()
  static final public ConstructionVariable ConstructionVariable() throws ParseException {
                                                Token var = null; Uri uri = null;
    jj_consume_token(URICONSTRUCTION);
    jj_consume_token(LEFTP);
    uri = Uri();
    jj_consume_token(RIGHTP);
    jj_consume_token(27);
    var = jj_consume_token(VARIABLE);
        {if (true) return new ConstructionVariable(var.image, uri.getUri());}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_3R_38() {
    if (jj_scan_token(VARIABLE)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(LEFTP)) return true;
    if (jj_3R_20()) return true;
    if (jj_3R_31()) return true;
    if (jj_3R_32()) return true;
    if (jj_scan_token(RIGHTP)) return true;
    return false;
  }

  static private boolean jj_3R_42() {
    if (jj_3R_38()) return true;
    return false;
  }

  static private boolean jj_3R_37() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(16)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) return true;
    }
    return false;
  }

  static private boolean jj_3R_49() {
    if (jj_3R_54()) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_8()) return true;
    return false;
  }
